feat(profile): view profile page
