# app/src/routes/api/account.ts
@@ -6,6 +6,7 @@ export const accountRoutes = express.Router()
 
 accountRoutes.get(`/accounts/`, AuthMiddleware.isAuthenticated, AccountController.findAll);
 accountRoutes.post(`/accounts/`, AuthMiddleware.isAuthenticated, AccountController.create);
+accountRoutes.get(`/accounts/profile`, AuthMiddleware.isAuthenticated, AccountController.profile);
 accountRoutes.get(`/accounts/:id`, AuthMiddleware.isAuthenticated, AccountController.findById);
 accountRoutes.put(`/accounts/profile`, AuthMiddleware.isAuthenticated, AccountController.updateProfile);
 accountRoutes.put(`/accounts/:id`, AuthMiddleware.isAuthenticated, AccountController.update);
